19991105-23:30 EDT David G. Holm <dholm@jsd-llc.com>

   * source/rtl/filesys.c
     ! Only truncate the file when the size of the write is zero bytes.

19991105-21:20 EDT David G. Holm <dholm@jsd-llc.com>

   * config/os2/icc.cf
     % Now that source/vm/main.c includes either mainstd.c or
       mainwin.c, reference main.obj instead of main$(HB_MAIN).obj
       when HB_MAIN is defined.

   * include/filesys.h
     ! Only use hb_fsReadLarge() and hb_fsWriteLarge() if the size
       of a ULONG is different from the size of a UINT (was USHORT,
       which is always going to be smaller than a ULONG).

   * source/common/hbtrace.c
     ! The hb_trace module uses strcmp(), which means that it
       has to include <string.h> to keep C++ compilers happy.

   * source/rtl/filesys.c
     ! Only use hb_fsReadLarge() and hb_fsWriteLarge() if the size
       of a ULONG is different from the size of a UINT (was USHORT,
       which is always going to be smaller than a ULONG).

   * source/runner/stdalone/Makefile
     % IBM's Visual Age C++ compiler will not resolve main() from a
       library, so it is necessary to set HB_MAIN, if it isn't already
       set, so that icc.cf will know to include the main.obj module.

19991105-14:07 GMT+1 Ryszard Glab <rglab@imid.med.pl>

    *source/rtl/codebloc.prg
	* memory occupied by detached local variables is properly released now
	
19991104-23:45 GMT+1 Victor Szel <info@szelvesz.hu>
  * source/rtl/filesys.c
    ! hb_fsSeek() now returns 0 instead of -1 on error, just like Clipper.
    % hb_fsSeek() double assigments removed.
    ! hb_fsLock() last error code handling fixed for some platforms.
    % hb_fsCommit() small simplification, double assignment removed.

19991104-14:30 EDT David G. Holm <dholm@jsd-llc.com>

   * source/pp/stdalone/hbpp.c
     ! Added third parameter (char *) to Hp_Parse() so that the
       Microsoft VC++ and IBM Visual Age C++ versions won't try
       to link in the hbppint module from the pp library.
